--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.1",
+    "@tanstack/react-query": "^5.90.2",
     "fuzzysort": "^3.1.0",
+    "kysely-neon": "^2.0.1",
     "next": "15.5.3",
     "postcss": "^8.5.6",
+    "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
